# flopsy

./: .env.example  .example.env  .gitignore  .gitmodules  .prettierignore  .prettierrc  README.md  flopsy.example.json5  flopsy.json5  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: README.md  agents.md  architecture.md  channels.md  cli.md  features.md  gateway.md  goal.md  hooks.md  mcp.md  memory.md  proactive.md  skills.md  tools.md  vault.md
docs/designs/: flopsygraph-memory-provider-seam.md  flopsygraph-memory-rethink.md  memory-redesign.md
prompts/proactive/: daily-news-digest.md  email-summary.md  interest-driven-nudge.md  weekly-creativity.md
scripts/: test-structured-output.ts
scripts/test-prompts/: smart-pulse-v2.md
src/agent/: architecture.md  package.json  tsconfig.json
src/app/: package.json  tsconfig.json
src/cli/: package.json  tsconfig.json
src/gateway/: package.json  tsconfig.json  vitest.config.ts
src/mcp-servers/: README.md  apple-notes.ts  apple-reminders.ts  browser.ts  calendar.ts  contacts.ts  drive.ts  gmail.ts  home-assistant.ts  obsidian.ts  package.json  shodan.ts  spotify.ts  tsconfig.json  twitter.ts  virustotal.ts  youtube.ts
src/shared/: package.json  vitest.config.ts
src/team/: package.json  tsconfig.json  vitest.config.ts
src/team/templates/skills/media/tts-speak/scripts/: main.py  pyproject.toml  speak.sh
src/vault/: README.md  package.json
test/cli/: auth-refresh-lock.test.ts
test/regression/: conversation-failures.test.ts  (+1 more)
(+646 files in other folders)
